@@ -186,7 +186,6 @@ class DeviceTalosRunner(VirtualenvMixin, DeviceMixin, MercurialScript):
                                              'talos')
         dirs['abs_browser_dir'] = os.path.join(abs_dirs['abs_work_dir'],
                                                c.get('browser_dir', 'browser'))
-        dirs['abs_device_flag_dir'] = c.get('device_flag_dir', c['base_work_dir'])
         for key in dirs.keys():
             if key not in abs_dirs:
                 abs_dirs[key] = dirs[key]
@@ -262,7 +261,6 @@ class DeviceTalosRunner(VirtualenvMixin, DeviceMixin, MercurialScript):
         file_path = os.path.join(dirs['abs_work_dir'], file_name)
         if c['enable_automation']:
             self.set_device_time()
-            self.set_device_proxy_flag("installing %s" % file_path)
         if self._log_level_at_least(DEBUG):
             self.run_command(["adb", "-s", serial, "shell", "ps"],
                              error_list=ADBErrorList)
@@ -311,7 +309,6 @@ class DeviceTalosRunner(VirtualenvMixin, DeviceMixin, MercurialScript):
             file_name = os.path.join(dirs['abs_browser_dir'], 'application.ini')
             self.run_command(["adb", "-s", serial, "push", file_name,
                               '/data/data/%s/application.ini' % c['device_package_name']])
-            self.clear_device_proxy_flag()
 
     def preflight_configure(self):
         if 'install-app' in self.actions:
